# scheme4r

./: Cargo.toml  README.md
src/: env.rs  interpreter.rs  lib.rs  main.rs  parser.rs
src/procedure/: apply.rs  branch.rs  define.rs  eval.rs  lambda.rs  mod.rs  numbers.rs  quote.rs  set.rs  syntax.rs
src/procedure/types/: list.rs  mod.rs
src/tests/: base.rs  branch.rs  define.rs  eval.rs  lambda.rs  mod.rs  numbers.rs  quote.rs  set.rs  syntax.rs  u8vector.rs
src/tests/types/: mod.rs
src/types/: func.rs  list.rs  mod.rs  procedure.rs  record.rs  refs.rs  types.rs  u8vector.rs  vector.rs
src/utils/: bool_utils.rs  mod.rs
