[package]
name = "scheme4r"
version = "0.1.0"
edition = "2021"
authors = ["yangrd <yangrd_1992@sina.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to scheme"
readme = "README.md"
homepage = "https://github.com/sunxyz/scheme4r"
repository = "https://github.com/sunxyz/scheme4r"
keywords = ["scheme", "rust", "interpreter", "eval", "scheme4r"]
categories = ["parser", "eval", "interpreter", "scheme4r"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
